[package]
name = "ct-uptime-exporter"
version = "0.1.0"
authors = ["andygabby <andygabby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {features=[]}
env_logger = ""
csv = "1.1"
tokio = { version = "0.2", features = ["full"] }
